--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="description" content="ToDo List , make your dreams">
+<meta name="keywords" content="List, ToDo, Task">
+<meta name="author" content="uglyhurd">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6ESW7DS130"></script>
 <script>
