--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta name="description" content="ToDo List , make your dreams">
 <meta name="keywords" content="List, ToDo, Task">
 <meta name="author" content="uglyhurd">
+<meta name="averageAge" content="16-40">
+<meta name="typeOfActivity" content="Any">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6ESW7DS130"></script>
 <script>
